- Fixed style issues in home page.

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -307,7 +307,7 @@ small,
 
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
-  color: #fff;
+  color: #31a9b8;
   background-color: transparent;
 }
 
