--- a/src/views/pages/profile.ejs
+++ b/src/views/pages/profile.ejs
@@ -20,14 +20,14 @@
      </form>-->
   </div>
   <div class="col-sm-6 profile-trends" style="">
-    <span class="trend-badge" title="Sentiments"><span class="fa fa-smile-o" style="color:#61a0a8;text-align:right;font-size:1em;display:inline-block"></span></span>
-    <div id="sparkline-sentiments" style="width:51%;display:inline-block;text-align:right"></div><br><br>
-    <span class="trend-badge" title="Engagement"><span class="fa fa-handshake-o" style="text-align:right;color:#ffaa80;font-size:1em;display:inline-block"></span></span>
-    <div id="sparkline" style="width:51%;display:inline-block;text-align:right"></div><br><br>
-    <span class="trend-badge" title="Likes"><span class="fa fa-heart-o" style="text-align:right;color:#c23531;font-size:1em;display:inline-block"></span></span>
-    <div id="sparkline-likes" style="width:51%;display:inline-block;text-align:right"></div><br><br>
-    <span class="trend-badge" title="Comments"><span class="fa fa-comments-o" style="color:#749f83;text-align:right;font-size:1em;display:inline-block"></span></span>
-    <div id="sparkline-comments" style="width:51%;display:inline-block;text-align:right"></div>
+    <span class="trend-badge" title="Sentiments"><span class="fa fa-smile-o" style="color:#61a0a8;text-align:right;font-size:1em;display:inline"></span></span>
+    <div id="sparkline-sentiments" style="width:51%;display:inline;text-align:right"></div><br><br>
+    <span class="trend-badge" title="Engagement"><span class="fa fa-handshake-o" style="text-align:right;color:#ffaa80;font-size:1em;display:inline"></span></span>
+    <div id="sparkline" style="width:51%;display:inline;text-align:right"></div><br><br>
+    <span class="trend-badge" title="Likes"><span class="fa fa-heart-o" style="text-align:right;color:#c23531;font-size:1em;display:inline"></span></span>
+    <div id="sparkline-likes" style="width:51%;display:inline;text-align:right"></div><br><br>
+    <span class="trend-badge" title="Comments"><span class="fa fa-comments-o" style="color:#749f83;text-align:right;font-size:1em;display:inline"></span></span>
+    <div id="sparkline-comments" style="width:51%;display:inline;text-align:right"></div>
   </div>
   <div class="col-sm-6 profile-boolean">
     <div style="min-width: 100%; display: inline-block;font-size: 1em;" class="col-sm-6">
