--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -123,7 +123,7 @@
           <span><a href="#" data-toggle="popover" data-trigger="focus" title="Returned records upper limit" data-content="For Instagram ETL and browsing operations which do not present -ALL- on their title, limit the count of returned records by setting this parameter." data-placement="top" class="info fa fa-info-circle"></a></span><br>
           <input  style="width:40%; display:inline;margin:5px;padding:10px;" placeholder="Set limit"  type="number" class="form-control" id="set-limit-input" count=0>
           <span><a href="#" data-toggle="popover" data-trigger="focus" title="Set members upper limit" data-content="Maximum number of set members get in to account for full data extraction, as a dynamic parameter." data-placement="top" class="info fa fa-info-circle"></a></span><br>
-          <input style="margin-bottom:5px;width:40%;" value="Get sets data" type="button" class="btn btn-primary" id="getSetDataBtn">
+          <input style="margin-bottom:5px;width:40%;margin-left:2%;" value="Get sets data" type="button" class="btn btn-primary" id="getSetDataBtn">
           <a href="#" data-toggle="popover" data-trigger="focus" title="Gets set A and set B data in full" data-content="Gets set A and set B members data, by each posts and each media and stores them all in database." data-placement="top" class="info fa fa-info-circle"></a><br><br>
           <div id="countera" class="stats-totals"></div><br>
           <div id="counterb" class="stats-totals"></div><br>
@@ -161,7 +161,7 @@
 
             </div>
 
-            <div style="display:inline-block" class="col-sm-6 text-center align-self-center profile-counters">
+            <div style="display:inline-block;margin-left:19%;" class="col-sm-6 text-center align-self-center profile-counters">
               <div style="background-color:#2f4554" class="byline-counter" onClick=getEndpointData("/instagram/posts?","recent-posts","<%=username%>","posts")>
 
                   <span class="byline" title="Posts count"><span id="self-posts-count" class="fa fa-instagram"></span></span>
