--- a/src/views/pages/comments.ejs
+++ b/src/views/pages/comments.ejs
@@ -12,10 +12,8 @@
           <%}%>
             <div style="min-width: 100px; display: inline-block;" class="col-sm-6 text-left align-self-center">
               <% if(!!edge.is_verified) { %>
-                <span class="verified glyphicon glyphicon-ok" title="Verified Account"></span><span class="verified glyphicon glyphicon-user" alt="Verified Account"></span>
-              <% }else{ %>
-                <span class="not-verified glyphicon glyphicon-user" title="Not verified!"></span>
-              <%}%>
+                <h6 class="profile-boolean-indicator"><span class="verified fa fa-check-circle" title="Verified Account"></span> Verified</h6>
+              <% }%>
               <% if(!!edge.followed_by_viewer) { %>
                 <span class="glyphicon glyphicon-star" title="Followed Account"></span>
               <% } %>
