--- a/src/views/pages/profile.ejs
+++ b/src/views/pages/profile.ejs
@@ -36,13 +36,8 @@
                                                     title="Private Account"></span>Private</h6>
       <% } %>
       <% if(!!etlData.is_verified) { %>
-        <h6 class="profile-boolean-indicator"><span class="verified glyphicon glyphicon-ok"
-                                                    title="Verified Account"></span><span
-            class="verified glyphicon glyphicon-user" alt="Verified Account"></span>Verified</h6>
-      <% }else{ %>
-        <h6 class="profile-boolean-indicator"><span class="not-verified glyphicon glyphicon-user"
-                                                    title="Not verified!"></span> Not verified</h6>
-      <% } %>
+        <h6 class="profile-boolean-indicator"><span class="verified fa fa-check-circle" title="Verified Account"></span> Verified</h6>
+      <% }%>
       <% if(!!etlData.followed_by_viewer) { %>
         <h6 class="profile-boolean-indicator"><span class="glyphicon glyphicon-star" title="Followed account"></span> Followed
           by you</h6>
