-Changed text processing approach from ground up to save resources from repetitive running of same operation which is now done one time upon extraction from social media (if configured, ofcourse))

--- a/src/views/layouts/layout-stylesheets.ejs
+++ b/src/views/layouts/layout-stylesheets.ejs
@@ -8,5 +8,6 @@
 <link rel="stylesheet" href="/css/dashboard.css">
 <!--<link rel="stylesheet" href="/css/OverlayScrollbars.min.css">-->
 <link rel="stylesheet" href="/css/font-awesome.min.css">
+<link rel="stylesheet" href="/css/jqcloud.min.css">
 
 
