--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -212,9 +212,9 @@
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
-        Profiles maps A
+        Set A Sentiment radar
       </div>
-      <div class="widget-stage classa">
+      <div id="" class="widget-stage classa">
         <img class="holders" data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes"></div>
@@ -230,9 +230,9 @@
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
-        Profiles maps B
+        Set B sentiment radar
       </div>
-      <div class="widget-stage classb">
+      <div id="" class="widget-stage classb">
         <img class="holders" data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes"></div>
@@ -246,6 +246,46 @@
       </div>
       <div class="widget-notes"></div>
     </div>
+
+    <div class="widget-wrapper">
+      <div class="widget-title">
+        Profiles posts comments emoji cloud A
+      </div>
+      <div id="emojiCloudA" class="widget-stage classa">
+        <img class="holders" data-src="holder.js/100px120?theme=white">
+      </div>
+      <div class="widget-notes"></div>
+    </div>
+    <div class="widget-wrapper">
+      <div class="widget-title">
+        Profiles posts comments word cloud A
+      </div>
+      <div id="wordCloudA" class="widget-stage classa">
+        <img class="holders" data-src="holder.js/100px120?theme=white">
+      </div>
+      <div class="widget-notes"></div>
+    </div>
+    <div class="widget-wrapper">
+      <div class="widget-title">
+        Profiles posts comments emoji cloud B
+      </div>
+      <div id="emojiCloudB" class="widget-stage classb">
+        <img class="holders" data-src="holder.js/100px120?theme=white">
+      </div>
+      <div class="widget-notes"></div>
+    </div>
+    <div class="widget-wrapper">
+      <div class="widget-title">
+        Profiles posts comments word cloud B
+      </div>
+      <div id="wordCloudB" class="widget-stage classb">
+        <img class="holders" data-src="holder.js/100px120?theme=white">
+      </div>
+      <div class="widget-notes"></div>
+    </div>
+
+
+
   </div>
 </div>
 <%- include ../pages/sidepanel-dashboards.ejs %>
