- Updated style in home page.

--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -252,15 +252,13 @@
           <div style="max-width:45vw" class="tab-pane container widget-stage" id="location-tab">
             <br>
             <input type="text" placeholder="Location..." class="form-control" id="location-input" location="location" style="display: inline;">
-            <a href="#" data-toggle="popover" data-trigger="focus" title="Location" data-content="Posts by location" data-placement="top" class="info fa fa-info-circle"></a>
-            <button style="display:inline" class="btn btn-primary etl-btn" type="button"  value="Get posts by location" click-target="/instagram/location?" call-type="location-posts">Location posts</button>
+            <button style="display:inline;margin-top:-2px;" class="btn btn-primary etl-btn" type="button"  value="Get posts by location" click-target="/instagram/location?" call-type="location-posts">Location posts</button>
             <a href="#" data-toggle="popover" data-trigger="focus" title="Location" data-content="Get posts by location" data-placement="top" class="info fa fa-info-circle"></a>
           </div>
           <div style="max-width:45vw" class="tab-pane container widget-stage" id="hashtag-tab">
             <br>
             <input style="display:inline" placeholder="Hashtag..." type="text" class="form-control" id="tag-input" tag="tag">
-            <a href="#" data-toggle="popover" data-trigger="focus" title="Tag" data-content="Post tag" data-placement="top" class="info fa fa-info-circle"></a>
-            <button style="display:inline" class="btn btn-primary etl-btn" type="button"  value="Get posts by tag" click-target="/instagram/tag?" call-type="tag-posts">Tag posts</button>
+            <button style="display:inline;margin-top:-2px;" class="btn btn-primary etl-btn" type="button"  value="Get posts by tag" click-target="/instagram/tag?" call-type="tag-posts">Tag posts</button>
             <a href="#" data-toggle="popover" data-trigger="focus" title="Tag" data-content="Get posts by tag" data-placement="top" class="info fa fa-info-circle"></a><br>
           </div>
         </div>
