--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -214,7 +214,7 @@
       <div class="widget-title">
         Set A Sentiment radar
       </div>
-      <div id="" class="widget-stage classa">
+      <div id="text-proc-totalsa" class="widget-stage classa">
         <img class="holders" data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes"></div>
