--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -212,7 +212,7 @@
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
-        Set A Sentiment radar
+        Set A corpus metrics
       </div>
       <div id="text-proc-totalsa" class="widget-stage classa">
         <img class="holders" data-src="holder.js/100px120?theme=white">
@@ -230,9 +230,9 @@
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
-        Set B sentiment radar
+        Set B corpus metrics
       </div>
-      <div id="" class="widget-stage classb">
+      <div id="text-proc-totalsb" class="widget-stage classb">
         <img class="holders" data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes"></div>
