--- a/src/views/layouts/layout-stylesheets.ejs
+++ b/src/views/layouts/layout-stylesheets.ejs
@@ -9,5 +9,6 @@
 <!--<link rel="stylesheet" href="/css/OverlayScrollbars.min.css">-->
 <link rel="stylesheet" href="/css/font-awesome.min.css">
 <link rel="stylesheet" href="/css/jqcloud.min.css">
+<link rel="stylesheet" href="/css/responsive-tabs.css">
 
 
