--- a/src/views/layouts/layouts-javascripts.ejs
+++ b/src/views/layouts/layouts-javascripts.ejs
@@ -3,6 +3,8 @@
 <script type="text/javascript" src="/js/dayjs.min.js"></script>
 <script type="text/javascript" src="/js/jquery.sparkline.min.js"></script>
 <script type="text/javascript" src="/js/jquery.tagsinput.min.js"></script>
+<script type="text/javascript" src="/js/jqcloud.min.js"></script>
+<script type="text/javascript" src="/js/jquery.responsiveTabs.js"></script>
 
 <script type="text/javascript" src="/js/holder.js"></script>
 <script src="/js/feathers.js"></script>
