--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -52,7 +52,6 @@
       </div>
       <div class="widget-notes"></div>
     </div>
-
     <div class="widget-wrapper">
       <div class="widget-title">
         Profiles A followers metrics
@@ -73,7 +72,6 @@
       </div>
       <div class="widget-notes"></div>
     </div>
-
     <div class="widget-wrapper">
       <div  class="widget-title">
         Profiles B followers metrics
@@ -84,6 +82,7 @@
       <div style="margin-left:32px;margin-top:30px;" id="profileB-metrics-legend" class="widget-notes">
       </div>
     </div>
+
     <div class="grid-split">
       <div class="widget-wrapper">
         <div class="widget-title">
@@ -208,8 +207,99 @@
         <div class="widget-notes"></div>
       </div>
 
+      <div class="widget-wrapper">
+        <div class="widget-title">
+          Text processing charts A
+        </div>
+        <div  style="max-width:45vw" id="text-proca" class="widget-stage">
+          <!-- Nav tabs -->
+          <ul style="max-width:45vw" class="nav nav-tabs">
+            <li id="wordCloudALink" class="nav-item">
+              <a href="#wordCloudA">Word Cloud</a>
+            </li>
+            <li id="emojiCloudALink" class="nav-item">
+              <a href="#emojiCloudA">Emoji Cloud</a>
+            </li>
+           <!-- <li id="emojiCloudPosALink" class="nav-item">
+              <a href="#emojiCloudPosA">Emoji Cloud|+|</a>
+            </li>
+            <li class="nav-item">
+              <a href="#emojiCloudNegA">Emoji Cloud|-|</a>
+            </li>-->
+            <li class="nav-item">
+              <a href="#tagCloudA">Hashtag Cloud</a>
+            </li>
+          </ul>
+
+          <!-- Tab panes -->
+          <div style="max-width:45vw" class="">
+            <div id="wordCloudA"  class="widget-stage classa" >
+              <img class="holders" data-src="holder.js/100px120?theme=white">
+            </div>
+            <div id="emojiCloudA"  class="widget-stage classa">
+              <img class="holders" data-src="holder.js/100px120?theme=white">
+            </div>
+          <!--  <div id="emojiCloudPosA"  class="widget-stage classa">
+              <img class="holders" data-src="holder.js/100px120?theme=white">
+            </div>
+            <div id="emojiCloudNegA"  class="widget-stage classa">
+              <img class="holders" data-src="holder.js/100px120?theme=white">
+            </div>-->
+            <div id="tagCloudA" class="widget-stage classa">
+              <img class="holders" data-src="holder.js/100px120?theme=white">
+            </div>
+          </div>
+        </div>
+        <div class="widget-notes"></div>
+      </div>
+      <div class="widget-wrapper">
+        <div class="widget-title">
+          Text processing charts B
+        </div>
+        <div  style="max-width:45vw" id="text-procb" class="widget-stage">
+          <!-- Nav tabs -->
+          <ul style="max-width:45vw" class="nav nav-tabs">
+            <li id="wordCloudBLink" class="nav-item">
+              <a href="#wordCloudB">Word Cloud</a>
+            </li>
+            <li id="emojiCloudBLink" class="nav-item">
+              <a href="#emojiCloudB">Emoji Cloud</a>
+            </li>
+           <!-- <li id="emojiCloudPosBLink" class="nav-item">
+              <a href="#emojiCloudPosB">Emoji Cloud|+|</a>
+            </li>
+            <li class="nav-item">
+              <a href="#emojiCloudNegB">Emoji Cloud|-|</a>
+            </li>-->
+            <li class="nav-item">
+              <a href="#tagCloudB">Hashtag Cloud</a>
+            </li>
+          </ul>
+
+          <!-- Tab panes -->
+          <div style="max-width:45vw" class="">
+            <div id="wordCloudB"  class="widget-stage classb" >
+              <img class="holders" data-src="holder.js/100px120?theme=white">
+            </div>
+            <div id="emojiCloudB"  class="widget-stage classb">
+              <img class="holders" data-src="holder.js/100px120?theme=white">
+            </div>
+         <!--   <div id="emojiCloudPosB"  class="widget-stage classb">
+              <img class="holders" data-src="holder.js/100px120?theme=white">
+            </div>
+            <div id="emojiCloudNegB"  class="widget-stage classb">
+              <img class="holders" data-src="holder.js/100px120?theme=white">
+            </div>-->
+            <div id="tagCloudB" class="widget-stage classb">
+              <img class="holders" data-src="holder.js/100px120?theme=white">
+            </div>
+          </div>
+        </div>
+        <div class="widget-notes"></div>
+      </div>
 
     </div>
+
     <div class="widget-wrapper">
       <div class="widget-title">
         Set A corpus metrics
@@ -247,7 +337,7 @@
       <div class="widget-notes"></div>
     </div>
 
-    <div class="widget-wrapper">
+<!--    <div class="widget-wrapper">
       <div class="widget-title">
         Profiles posts comments emoji cloud A
       </div>
@@ -282,7 +372,7 @@
         <img class="holders" data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes"></div>
-    </div>
+    </div>-->
 
 
 
