-Fix on text processing results tabs in stats dashboard

--- a/src/views/pages/dashboards-stats.ejs
+++ b/src/views/pages/dashboards-stats.ejs
@@ -213,11 +213,11 @@
         </div>
         <div  style="max-width:45vw" id="text-proca" class="widget-stage">
           <!-- Nav tabs -->
-          <ul style="max-width:45vw" class="nav nav-tabs">
-            <li id="wordCloudALink" class="nav-item">
+          <ul style="max-width:45vw" >
+            <li id="wordCloudALink" >
               <a href="#wordCloudA">Word Cloud</a>
             </li>
-            <li id="emojiCloudALink" class="nav-item">
+            <li id="emojiCloudALink" >
               <a href="#emojiCloudA">Emoji Cloud</a>
             </li>
            <!-- <li id="emojiCloudPosALink" class="nav-item">
@@ -337,42 +337,25 @@
       <div class="widget-notes"></div>
     </div>
 
-<!--    <div class="widget-wrapper">
+  <!--  <div class="widget-wrapper">
       <div class="widget-title">
-        Profiles posts comments emoji cloud A
+        Text sentiment radar A
       </div>
-      <div id="emojiCloudA" class="widget-stage classa">
+      <div  style="max-width:45vw" id="text-sentimenta" class="widget-stage">
         <img class="holders" data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes"></div>
     </div>
     <div class="widget-wrapper">
       <div class="widget-title">
-        Profiles posts comments word cloud A
+        Text sentiment radar B
       </div>
-      <div id="wordCloudA" class="widget-stage classa">
-        <img class="holders" data-src="holder.js/100px120?theme=white">
-      </div>
-      <div class="widget-notes"></div>
-    </div>
-    <div class="widget-wrapper">
-      <div class="widget-title">
-        Profiles posts comments emoji cloud B
-      </div>
-      <div id="emojiCloudB" class="widget-stage classb">
-        <img class="holders" data-src="holder.js/100px120?theme=white">
-      </div>
-      <div class="widget-notes"></div>
-    </div>
-    <div class="widget-wrapper">
-      <div class="widget-title">
-        Profiles posts comments word cloud B
-      </div>
-      <div id="wordCloudB" class="widget-stage classb">
+      <div  style="max-width:45vw" id="text-sentimentb" class="widget-stage">
         <img class="holders" data-src="holder.js/100px120?theme=white">
       </div>
       <div class="widget-notes"></div>
     </div>-->
+
 
 
 
