- Added title to total stats in dashboard stats. - Updated Maximize/minimize side panel button functionality in home page. - updated posts style in posts page.

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -958,6 +958,6 @@ div.tagsinput span.tag{
   color: #f1f1f2;
 }
 #mention-metrica, #mention-metricb{
-  background-color: #6c757d;
+  background-color: #a1a0a0;
   color: #f1f1f2;
 }
