--- a/src/views/pages/posts.ejs
+++ b/src/views/pages/posts.ejs
@@ -3,13 +3,16 @@
     <% edge = edge.node %>
     <div class="col-md-4  align-self-center">
 
-      <div class="card" style="max-height:300px; min-height:300px; overflow-y: hidden">
+      <div class="card" style="overflow-y: hidden">
         <div class="card-body">
-          <div style="cursor:pointer" onClick=getEndpointData("/instagram/post?","post-json",<%= '"'+edge.shortcode+'"' %>,"post")>
-            <img class="img-fluid" src="<%= edge.thumbnail_src %>" alt="<%= edge.edge_media_to_caption? edge.edge_media_to_caption.edges[0]:[] %>">
+          <div style="cursor:pointer"
+               onClick=getEndpointData("/instagram/post?","post-json",<%= '"'+edge.shortcode+'"' %>,"post")>
+            <img class="img-fluid" src="<%= edge.thumbnail_src %>"
+                 alt="<%= edge.edge_media_to_caption? edge.edge_media_to_caption.edges[0]:[] %>">
           </div>
           <div class="likes-comments">
-              <span style="cursor:pointer; color: rgb(249,5,5);" class="fa fa-heart" onClick=getEndpointData("/instagram/likes?","post-likes","<%= edge.shortcode %>","post-likes")>
+              <span style="cursor:pointer; color: rgb(249,5,5);" class="fa fa-heart"
+                    onClick=getEndpointData("/instagram/likes?","post-likes","<%= edge.shortcode %>","post-likes")>
                 <% if(edge.edge_media_preview_like){ %>
                   <% if(edge.edge_media_preview_like.count) { %><%= edge.edge_media_preview_like.count+' ' %>
                   <% } %>
@@ -18,7 +21,8 @@
                   <%= edge.edge_liked_by.count+' ' %>
                 <% } %>
               </span>
-              <span style="cursor:pointer; color:#749f83;" class="fa fa-comment" onClick=getEndpointData("/instagram/comments?","post-comments","<%= edge.shortcode %>","post-comments")>
+              <span style="cursor:pointer; color:#749f83;" class="fa fa-comment"
+                    onClick=getEndpointData("/instagram/comments?","post-comments","<%= edge.shortcode %>","post-comments")>
                 <% if(edge.edge_media_to_comment){ %>
                   <%= edge.edge_media_to_comment.count+' ' %>
                 <% } %>
@@ -31,11 +35,7 @@
           <%}%>
         </div>
         <div class="card-header" style="font-size:12px">
-          <% if(edge.edge_media_to_caption){ %>
-            <%=edge.edge_media_to_caption.edges[0]? edge.edge_media_to_caption.edges[0].node.text:"CARD WITH NO CAPTION----------------------------------------------------------------------------------------------" %>
-          <%}else {%>
-            <%="CARD HEADER"%>
-          <%}%>
+          <%= edge.edge_media_to_caption.edges[0] ? edge.edge_media_to_caption.edges[0].node.text : "" %>
         </div>
 
 
