- updated posts data icons in posts and profile page.

--- a/src/views/pages/posts.ejs
+++ b/src/views/pages/posts.ejs
@@ -7,11 +7,14 @@
         <div class="card-body">
           <div style="cursor:pointer"
                onClick=getEndpointData("/instagram/post?","post-json",<%= '"'+edge.shortcode+'"' %>,"post")>
+            <% if(edge.is_video){ %>
+              <span style="color: #767474;position: absolute;z-index: 999;margin-left: 85%;margin-top: 6%;" class="fa fa-video-camera"></span>
+            <% } %>
             <img class="img-fluid" src="<%= edge.thumbnail_src %>"
                  alt="<%= edge.edge_media_to_caption? edge.edge_media_to_caption.edges[0]:[] %>">
           </div>
           <div class="likes-comments">
-              <span style="cursor:pointer; color: rgb(249,5,5);" class="fa fa-heart"
+              <span style="cursor:pointer; color: rgb(249,5,5);" class="fa fa-heart-o"
                     onClick=getEndpointData("/instagram/likes?","post-likes","<%= edge.shortcode %>","post-likes")>
                 <% if(edge.edge_media_preview_like){ %>
                   <% if(edge.edge_media_preview_like.count) { %><%= edge.edge_media_preview_like.count+' ' %>
@@ -21,12 +24,23 @@
                   <%= edge.edge_liked_by.count+' ' %>
                 <% } %>
               </span>
-              <span style="cursor:pointer; color:#749f83;" class="fa fa-comment"
+              <span style="cursor:pointer; color:#749f83;" class="fa fa-comments-o"
                     onClick=getEndpointData("/instagram/comments?","post-comments","<%= edge.shortcode %>","post-comments")>
                 <% if(edge.edge_media_to_comment){ %>
                   <%= edge.edge_media_to_comment.count+' ' %>
                 <% } %>
               </span>
+
+            <span style="cursor:pointer; color:#ffaa80;" class="fa fa-handshake-o"> 0</span>
+            <span style="cursor:pointer; color:#61a0a8;" class="fa fa-exchange"> 0</span>
+
+            <% if(edge.is_video){ %>
+              <span style="cursor:pointer; color:#e0b0b1;" class="fa fa-video-camera">
+                <% if(edge.video_view_count){ %>
+                  <%= edge.video_view_count+' ' %>
+                  <% } %>
+              </span>
+            <% } %>
 
           </div>
           <% if (edge.owner){%>
