- Implemented get hashtag sets data (instead of profile sets), including text processing but not location processing due to ridiculous limitations OSM Nominatim service exhibits in obvious violation of what they announce as service quota policy

--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -125,6 +125,7 @@
           <input  style="width:40%; display:inline;margin:5px;padding:10px;" placeholder="Set limit"  type="number" class="form-control" id="set-limit-input" count=0>
           <span><a href="#" data-toggle="popover" data-trigger="focus" title="Set members upper limit" data-content="Maximum number of set members get in to account for full data extraction, as a dynamic parameter." data-placement="top" class="info fa fa-info-circle"></a></span><br>
           <input style="margin-bottom:5px;width:40%;margin-left:2%;" value="Get sets data" type="button" class="btn btn-primary" id="getSetDataBtn">
+          <!--<input style="margin-bottom:5px;width:40%;margin-left:2%;" value="Get tag sets data" type="button" class="btn btn-primary" id="getTagSetDataBtn">-->
           <a href="#" data-toggle="popover" data-trigger="focus" title="Gets set A and set B data in full" data-content="Gets set A and set B members data, by each posts and each media and stores them all in database." data-placement="top" class="info fa fa-info-circle" style="margin-left:-6px;"></a><br><br>
           <div id="countera" class="stats-totals"></div><br>
           <div id="counterb" class="stats-totals"></div><br>
