- Updated posts style in post page and feed page.

--- a/src/views/pages/post.ejs
+++ b/src/views/pages/post.ejs
@@ -30,18 +30,31 @@
           <img id="media-preview" class="img-fluid" src="<%=mediaSrc %>" alt="<%= etlData.edge_media_to_caption.edges[0] ? etlData.edge_media_to_caption.edges[0].node.text : etlData.id %>">
         </a>
         <div class="likes-comments">
-                <span style="cursor:pointer; color: rgb(249,5,5);" class="fa fa-heart" onClick=getEndpointData("/instagram/likes?","post-likes","<%= etlData.shortcode %>","post-likes")>
+                <span style="cursor:pointer; color: rgb(249,5,5);" class="fa fa-heart-o"
+                      onClick=getEndpointData("/instagram/likes?","post-likes","<%= etlData.shortcode %>","post-likes")>
                 <%if(etlData.edge_media_preview_like){%>
                   <% if(etlData.edge_media_preview_like.count) { %><%=etlData.edge_media_preview_like.count+' '%> <% } %>
                 <%}else if(etlData.edge_liked_by){ %><%=etlData.edge_liked_by.count+' '%>  <%}%>
               </span>
-          <span style="color:#749f83;" class="fa fa-comment">
+          <span style="color:#749f83;" class="fa fa-comments-o">
             <%if(etlData.edge_media_to_comment){%>
             <%=etlData.edge_media_to_comment.count+' '%>
             <%}else if(etlData.edge_media_preview_comment){ %>
             <%=etlData.edge_media_preview_comment.edges.length+' '%>
             <%} %>
           </span>
+
+          <span style="cursor:pointer; color:#ffaa80;" class="fa fa-handshake-o"> 0</span>
+          <span style="cursor:pointer; color:#61a0a8;" class="fa fa-exchange"> 0</span>
+
+          <% if(etlData.is_video){ %>
+            <span style="cursor:pointer; color:#e0b0b1;" class="fa fa-video-camera">
+              <% if(etlData.video_view_count){ %>
+                <%= etlData.video_view_count+' ' %>
+              <% } %>
+            </span>
+          <% } %>
+
 
         </div>
       </div>
