--- a/src/views/pages/feed.ejs
+++ b/src/views/pages/feed.ejs
@@ -3,10 +3,13 @@
     <% if (edge.node) edge = edge.node %>
     <% if(edge.display_url || edge.edge_media_to_caption){ %>
       <div class="col-md-4  align-self-center">
-        <div class="card" style="height:300px; min-height:300px;font-size:12px;overflow-y: hidden;">
+        <div class="card" style="overflow-y: hidden;">
           <div class="card-body">
             <div style="cursor:pointer"
                  onClick=getEndpointData("/instagram/post?","post-json",<%= '"' + edge.shortcode + '"' %>,"post")>
+              <% if(edge.is_video){ %>
+                <span style="color: #767474;position: absolute;z-index: 999;margin-left: 85%;margin-top: 6%;" class="fa fa-video-camera"></span>
+              <% } %>
               <img class="img-fluid" src="<%= edge.display_url %>"
                    alt="<%= edge.edge_media_to_caption ? edge.edge_media_to_caption.edges[0] : [] %>">
             </div>
@@ -17,7 +20,8 @@
             <% }else if(edge.edge_liked_by){ %><%= edge.edge_liked_by? edge.edge_liked_by.count : '-&#45;&#45;' + ' ' %> <% } %>
           </p>-->
             <div class="likes-comments">
-              <span style="cursor:pointer; color: rgb(249,5,5);" class="fa fa-heart" onClick=getEndpointData("/instagram/likes?","post-likes","<%= edge.shortcode %>","post-likes")>
+              <span style="cursor:pointer; color: rgb(249,5,5);" class="fa fa-heart-o"
+                    onClick=getEndpointData("/instagram/likes?","post-likes","<%= edge.shortcode %>","post-likes")>
                 <% if(edge.edge_media_preview_like){ %>
                   <% if(edge.edge_media_preview_like.count) { %><%= edge.edge_media_preview_like.count+' ' %>
                   <% } %>
@@ -25,15 +29,26 @@
                   <%= edge.edge_liked_by.count+' ' %>
                 <% } %>
               </span>
-              <span style="cursor:pointer; color:#749f83;" class="fa fa-comment" onClick=getEndpointData("/instagram/comments?","post-comments","<%= edge.shortcode %>","post-comments")>
+              <span style="cursor:pointer; color:#749f83;" class="fa fa-comments-o"
+                    onClick=getEndpointData("/instagram/comments?","post-comments","<%= edge.shortcode %>","post-comments")>
                 <% if(edge.edge_media_to_comment){ %>
                   <%= edge.edge_media_to_comment.count+' ' %>
                 <% } %>
               </span>
+              <span style="cursor:pointer; color:#ffaa80;" class="fa fa-handshake-o"> 0</span>
+              <span style="cursor:pointer; color:#61a0a8;" class="fa fa-exchange"> 0</span>
+
+              <% if(edge.is_video){ %>
+                <span style="cursor:pointer; color:#e0b0b1;" class="fa fa-video-camera">
+                  <% if(edge.video_view_count){ %>
+                    <%= edge.video_view_count+' ' %>
+                  <% } %>
+                </span>
+              <% } %>
 
             </div>
           </div>
-          <div class="card-header" style="">
+          <div class="card-header" style="font-size:12px">
             <% if(edge.edge_media_to_caption){ %>
             <%= edge.edge_media_to_caption.edges[0]? edge.edge_media_to_caption.edges[0].node.text:"CARD HEADER" %>
             <% } %>
